2006-01-19  Quentin Mathe <qmathe@club-internet.fr>
    
    * COPYING: Added.
    * SBServicesBarItem.h:
    * SBServicesBarItem.m:
    * SBServicesBar.h:
    * SBServicesBar.m:
    Updated LGPL license notice to 2.1 from 2.
    * GNUmakefile:
    * GNUmakefile.preamble:
    * GNUmakefile.postamble:
    Removed superfluous license notice.

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>
    
    * GNUmakefile.postamble: Inserted missing white space.
    * SBServicesBar.h:
    * SBServicesBarItem.h:
    Replaced UnitKit import directive with '@protocol UKTest' declaration in 
    order to avoid UnitKit dependency when we are making a standard build.

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>
    
    * GNUmakefile.postamble:
    * GNUmakefile.preamble: 
    Updated to match changes in IconKit and LuceneKit.

2005-06-07  Quentin Mathe <qmathe@club-internet.fr>
    
	* GNUmakefile.postamble:
	* GNUmakefile.preamble: 
	Added to allow framework build when UnitKit isn't already installed 
	(or other Etoile frameworks).
	* GNUmakefile: Updated to take in account new files.

2005-03-13  Quentin Mathe <qmathe@club-internet.fr>
    
	* SBServicesBarItem.h:
	* SBServicesBarItem.m:
	* SBServicesBar.h:
	* SBServicesBar.m:
	* INSTALL:
	* README:
	* GNUmakefile:
	Initial import.