@@ -4,4 +4,6 @@ ifeq ($(test), yes)
 ADDITIONAL_INCLUDE_DIRS += -I$(PROJECT_DIR)/UnitKit 
 
 ADDITIONAL_LIB_DIRS += -L$(PROJECT_DIR)/UnitKit/$(GNUSTEP_OBJ_DIR)
+
+ADDITIONAL_CPPFLAGS += -DHAVE_UKTEST
 endif
